# React

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
ir-analysis/: Cargo.toml
ir-analysis/src/: effect.rs  emulator.rs  expr.rs  lib.rs  maxweight.rs  smt.rs
ir-analysis/src/analysis/: control_flow_graph.rs  mod.rs
ir-analysis/src/module/: kblock.rs  kfunction.rs  kinstruction.rs  kmodule.rs  mod.rs
react/: Cargo.toml
react/src/: config.rs  dataset.rs  lib.rs  main.rs  metric.rs
source-analysis/: Cargo.toml
source-analysis/src/: lib.rs
